--- a/courses.html
+++ b/courses.html
@@ -86,7 +86,7 @@
       <br>
       <h3 class="heading-1"> ITEC136</h3>
       24SU<br>
-      Principals of Programming
+      Principles of Programming
       <p>Description: This course introduces programming to individuals with little or no programming background. The
         goal of this course is to introduce the fundamentals of structured programming, problem solving, algorithm
         design, and software lifecycle. Topics will include testing, data types, operations, repetition and selection
