--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         Cybersecurity. He taught Computer Science for over 10 years as an adjunct faculty member at Franklin University.
         In 2016, he spent
         a month teaching computer algorithms as a visiting scholar at a college in Muscat, Oman.</p>
-      <p class="paragraph">After 7 years as an instruction in coding bootcamp, in May of 2024, John joined Franklin
-        University as a fullt-time faculty member, teaching in Computing Sciences and Mathematics,</p>
+      <p class="paragraph">After 7 years as an instructor in a coding bootcamp, in May of 2024, John joined Franklin
+        University as a full-time faculty member, teaching in Computing Sciences and Mathematics,</p>
 
       <p class="paragraph">John is the first-named inventor of two patents for a user interface for banking, bill
         paying, and shopping. He
@@ -54,10 +54,9 @@
 
       <p class="paragraph">John has always been the “go to” guy when others needed an explanation for technical topics.
         In addition to his
-        time teaching beginner programming students at Franklin University and at a coding bootcamp, John has acted an a
-        mentor and resource for
-        many programmers and
-        people who wanted to become programmers. A committed tinker, his workbench is packed with the small robots that
+        time teaching beginner programming students at Franklin University and at a coding bootcamp, John has acted as a
+        mentor and resource for many programmers and people who wanted to become programmers. A committed tinker, his
+        workbench is packed with the small robots that
         he builds and programs
         in his spare time.</p>
     </article>
@@ -69,8 +68,8 @@
         target="_blank" class="button">Book Time with Me</a>
     </div>
     <div class="coffee-span-12">
-      <a href="mailto:john.fulton2@franklin.edu"
-        target="_blank" class="button">Email Me at john.fulton2@franklin.edu</a>
+      <a href="mailto:john.fulton2@franklin.edu" target="_blank" class="button">Email Me at
+        john.fulton2@franklin.edu</a>
     </div>
   </main>
   <div class="row full-width-row footer">
