--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
       <p class="paragraph">
 
         <h2 class="heading-1">John Fulton</h2>
-        <p><a href="mailto:john@TechElevator.com">john.fulton2@franklin.edu</a></p><br>
+        <p><a href="mailto:john.fulton2@franklin.edu">john.fulton2@franklin.edu</a></p><br>
 
 
       <h2 class="heading-1">Employment History:</h2><br>
@@ -46,7 +46,7 @@
       <ul>
         <li>Preparing and delivering lectures, labs, and other instructional activities for both on-campus and online
           courses.</li>
-        <li>Evaluation of student assignemtns and providing feedback</li>
+        <li>Evaluation of student assignments and providing feedback</li>
         <li>Acting as a point of contact and a resource for students</li>
       </ul>
 
