--- a/other.html
+++ b/other.html
@@ -18,6 +18,7 @@
   <script>document.createElement("picture");</script>
   <script src="js/picturefill.min.js" class="picturefill" async="async"></script>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="icon" type="image/x-icon" href="jf.png">
 </head>
 
 <body>
@@ -42,7 +43,8 @@
       <h3 class="heading-1"> CBUS Networking Events</h3>
       <p class="paragraph"><a href="https://cbus-networking-events.org"
           target="_blank">https://cbus-networking-events.org</a></p>
-      <p>Networking events for in-person and remote technical networking. Focused on Columbus, OH, but with links and tips
+      <p>Networking events for in-person and remote technical networking. Focused on Columbus, OH, but with links and
+        tips
         for other locations as well. </p>
       <br>
 
