--- a/courses.html
+++ b/courses.html
@@ -18,6 +18,7 @@
   <script>document.createElement("picture");</script>
   <script src="js/picturefill.min.js" class="picturefill" async="async"></script>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="icon" type="image/x-icon" href="jf.png">
 </head>
 
 <body>
