--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script>document.createElement("picture");</script>
   <script src="js/picturefill.min.js" class="picturefill" async="async"></script>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="icon" type="image/x-icon" href="jf.png">
 </head>
 
 <body>
@@ -78,28 +79,29 @@
   <script>
     // This function fetches the navigation and sets the active class
     async function loadNavigation(activePage) {
-        try {
-            // Fetch the HTML content from the nav.html file
-            const response = await fetch('nav.html');
-            const html = await response.text();
-            
-            // Insert the fetched HTML into the placeholder div
-            document.getElementById('nav-placeholder').innerHTML = html;
+      try {
+        // Fetch the HTML content from the nav.html file
+        const response = await fetch('nav.html');
+        const html = await response.text();
 
-            // Find the correct list item and add the active class
-            const activeTab = document.getElementById(`nav-${activePage}`);
-            if (activeTab) {
-                activeTab.classList.add('active-tab');
-            }
-        } catch (error) {
-            console.error('Error loading navigation:', error);
+        // Insert the fetched HTML into the placeholder div
+        document.getElementById('nav-placeholder').innerHTML = html;
+
+        // Find the correct list item and add the active class
+        const activeTab = document.getElementById(`nav-${activePage}`);
+        if (activeTab) {
+          activeTab.classList.add('active-tab');
         }
+      } catch (error) {
+        console.error('Error loading navigation:', error);
+      }
     }
 
     // Call the function on page load, passing the name of the active page
     document.addEventListener('DOMContentLoaded', () => {
-        loadNavigation('home');
+      loadNavigation('home');
     });
   </script>
 </body>
+
 </html>
