--- a/contact.html
+++ b/contact.html
@@ -35,19 +35,26 @@
 
 
       <br>
-      <h3 class="heading-1"> CBUS Networking Events</h3>
-      <p class="paragraph"><a href="https://cbus-networking-events.org"
-          target="_blank">https://cbus-networking-events.org</a></p>
-      <p>Networking events for in-person and remote technical networking. Focused on Columbus, OH, but with links and
-        tips
-        for other locations as well. </p>
+
+      <h3 class="heading-1"> John Fulton</h3>
+      <h3 class="heading-1"> M.S. Comp. Sci., M.S. Cybersecurity</h3>
+      <h3 class="heading-1"> Lecturer and Student Coordinator, Computing Sciences</h3>
+      <h3 class="heading-1"> 203 Frasch Hall</h3>
+      <h3 class="heading-1"> Franklin University</h3>
+      <h3 class="heading-1"> 201 S. Grant Ave. Columbus, OH 43215</h3>
+
+      <h3 class="heading-1"> 614-947-6445</h3>
+      <h3 class="heading-1"> john.fulton2@franklin.edu</h3>
+      <h3 class="heading-1"> https://www.linkedin.com/in/johnfultonorg/</h3>
+      <h3 class="heading-1"> https://www.franklin.edu/about-us/faculty-staff/faculty-profiles/fulton-john</h3)
+
       <br>
 
     </article>
     <div id="footer-placeholder"></div>
   </main>
 
-    <script>
+  <script>
     // This function fetches the navigation and sets the active class
     async function loadNavigation(activePage) {
       try {
@@ -86,7 +93,7 @@
 
     // Call the function on page load, passing the name of the active page for the navigation
     document.addEventListener('DOMContentLoaded', () => {
-      loadNavigation('other');
+      loadNavigation('contact');
       loadFooter();
     });
   </script>
