--- a/courses.html
+++ b/courses.html
@@ -135,7 +135,11 @@
     </article>
     <div id="footer-placeholder"></div>
   </main>
-  
+  <div class="row full-width-row footer">
+    <div class="coffee-span-12">
+    </div>
+  </div>
+
   <script>
     // This function fetches the navigation and sets the active class
     async function loadNavigation(activePage) {
@@ -180,4 +184,5 @@
     });
   </script>
 </body>
+
 </html>
