--- a/resume.html
+++ b/resume.html
@@ -241,6 +241,10 @@
     </article>
     <div id="footer-placeholder"></div>
   </main>
+  <div class="row full-width-row footer">
+    <div class="coffee-span-12">
+    </div>
+  </div>
 
   <script>
     // This function fetches the navigation and sets the active class
