--- a/other.html
+++ b/other.html
@@ -46,8 +46,12 @@
     </article>
     <div id="footer-placeholder"></div>
   </main>
+  <div class="row full-width-row footer">
+    <div class="coffee-span-12">
+    </div>
+  </div>
 
-    <script>
+  <script>
     // This function fetches the navigation and sets the active class
     async function loadNavigation(activePage) {
       try {
