--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
       <h3 class="heading-1"> john.fulton2@franklin.edu</h3>
       <h3 class="heading-1"> https://www.linkedin.com/in/johnfultonorg/</h3>
       <h3 class="heading-1"> https://www.franklin.edu/about-us/faculty-staff/faculty-profiles/fulton-john</h3)
-
+      <h3 class="heading-1"> https://scholar.google.com/citations?user=eIgYwe8AAAAJ </h3>
       <br>
 
     </article>
