--- a/contact.html
+++ b/contact.html
@@ -45,9 +45,9 @@
 
       <h3 class="heading-1"> 614-947-6445</h3>
       <h3 class="heading-1"> john.fulton2@franklin.edu</h3>
-      <h3 class="heading-1"> https://www.linkedin.com/in/johnfultonorg/</h3>
-      <h3 class="heading-1"> https://www.franklin.edu/about-us/faculty-staff/faculty-profiles/fulton-john</h3)
-      <h3 class="heading-1"> https://scholar.google.com/citations?user=eIgYwe8AAAAJ </h3>
+      <a href="https://www.linkedin.com/in/johnfultonorg/" target="_blank"><h3 class="heading-1"> Visit LinkedIn</h3></a>
+      <a href="https://www.franklin.edu/about-us/faculty-staff/faculty-profiles/fulton-john" target="_blank"><h3 class="heading-1"> Visit Franklin Faculty Profile</h3></a>
+      <a href="https://scholar.google.com/citations?user=eIgYwe8AAAAJ" target="_blank"><h3 class="heading-1"> Visit Google Scholar</h3></a>
       <br>
 
     </article>
