--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
       }
     }
 
-    // This function fetches the navigation and sets the active class
+    // This function fetches footer 
     async function loadFooter() {
       try {
         // Fetch the HTML content from the nav.html file
