--- a/other.html
+++ b/other.html
@@ -43,6 +43,13 @@
         for other locations as well. </p>
       <br>
 
+
+      <h3 class="heading-1"> LinkedIn & Networking Presentation</h3>
+      <p class="paragraph"><a href="Networking LinkedIn Seminar.pdf" target="_blank">Networking LinkedIn Seminar.pdf</a>
+      </p>
+      <p>Ideas for Technical Netwokring and Using LinkedIn </p>
+      <br>
+
     </article>
     <div id="footer-placeholder"></div>
   </main>
@@ -72,7 +79,7 @@
       }
     }
 
-    // This function fetches the navigation and sets the active class
+    // This function fetches the footer
     async function loadFooter() {
       try {
         // Fetch the HTML content from the nav.html file
