--- a/resume.html
+++ b/resume.html
@@ -267,7 +267,7 @@
       }
     }
 
-    // This function fetches the navigation and sets the active class
+    // This function fetches the footer
     async function loadFooter() {
       try {
         // Fetch the HTML content from the nav.html file
