--- a/other.html
+++ b/other.html
@@ -47,7 +47,7 @@
       <h3 class="heading-1"> LinkedIn & Networking Presentation</h3>
       <p class="paragraph"><a href="Networking LinkedIn Seminar.pdf" target="_blank">Networking LinkedIn Seminar.pdf</a>
       </p>
-      <p>Ideas for Technical Netwokring and Using LinkedIn </p>
+      <p>Ideas for Technical Networking and Using LinkedIn </p>
       <br>
 
     </article>
