--- a/other.html
+++ b/other.html
@@ -44,7 +44,7 @@
       <br>
 
 
-      <h3 class="heading-1"> LinkedIn & Networking Presentation</h3>
+      <h3 class="heading-1"> LinkedIn & Networking Presentation - 25FA</h3>
       <p class="paragraph"><a href="Networking LinkedIn Seminar.pdf" target="_blank">Networking LinkedIn Seminar.pdf</a>
       </p>
       <p>Ideas for Technical Networking and Using LinkedIn </p>
