--- a/other.html
+++ b/other.html
@@ -52,7 +52,7 @@
       <h3 class="heading-1"> Marketing, WIX, and Web Design</h3>
       <p class="paragraph"><a href="Marketing WIX and Web Design.pdf" target="_blank">Marketing WIX and Web Design.pdf</a>
       </p>
-      <p>Need a minium web presence for your small business or organization? WIX could be a place to start. Presentation for Action for Children on 6/21/25</p>
+      <p>Need a minimum web presence for your small business or organization? WIX could be a place to start. Presentation for Action for Children on 6/21/25</p>
       <br>
 
 
