--- a/nav.html
+++ b/nav.html
@@ -11,7 +11,9 @@
         <li id="nav-resume"><a href="resume.html">Resume</a></li>
 
         <li id="nav-courses"><a href="courses.html">Courses Taught</a></li>
-        <li id="nav-contact"><a href="contact.html">Contact Info</a></li>
+        <li id="nav-cyber"><a href="cyber.html">Fraud Prevention and Cybersecurity</a></li>
         <li id="nav-other"><a href="other.html">Other Links</a></li>
+        <li id="nav-contact"><a href="contact.html">Contact Info</a></li>
+
     </ul>
 </nav>
