--- a/courses.html
+++ b/courses.html
@@ -34,7 +34,7 @@
   </div>
   <main class="row">
     <article class="coffee-span-8 coffee-880-span-8 coffee-549-span-12 coffee-700-span-12">
-
+       <h3 class="heading-1"> Current through Spring 2026</h3>
       <br>
       <h3 class="heading-1"> BUSA603</h3>
       25FA<br>
