--- a/footer.html
+++ b/footer.html
@@ -7,5 +7,10 @@
     john.fulton2@franklin.edu</a>
   <div class="coffee-span-12">
     <div>
-      <p>Version 3.5</p>
+
+      <p>Version 3.6</p>
+
+      <p>Copyright © 2025 John Fulton <br /> This site includes third-party content, I do
+        not claim ownership over these third-party materials. All rights to the original
+        content belong to their respective owners</p>
     </div>
