--- a/cyber.html
+++ b/cyber.html
@@ -37,12 +37,14 @@
 
       <br>
       <h3 class="heading-1"> AARP Top Suggestions for Preventing Fraud</h3>
-      <p class="paragraph"><a href="aarp.html" target="_blank">aarp.html</a></p>
+      <p class="paragraph"><a href="https://johnfultonorg.github.io/aarp.html"
+          target="_blank">https://johnfultonorg.github.io/aarp.html</a></p>
       <p>Not cybersecurity specificy, but more "Living in an online world."</p>
       <br>
 
       <h3 class="heading-1"> Top Four Cybersecurity Tasks</h3>
-      <p class="paragraph"><a href="top4cyber.html" target="_blank">top4cyber.html</a></p>
+      <p class="paragraph"><a href="https://johnfultonorg.github.io/top4cyber.html"
+          target="_blank">https://johnfultonorg.github.io/top4cyber.html</a></p>
       <p>You can't do everything. What should you do first?</p>
       <br>
 
