--- a/nav.html
+++ b/nav.html
@@ -12,6 +12,7 @@
 
         <li id="nav-courses"><a href="courses.html">Courses Taught</a></li>
         <li id="nav-cyber"><a href="cyber.html">Fraud Prevention and Cybersecurity</a></li>
+        <li id="nav-merit"><a href="merit.html">Merit Badges</a></li>
         <li id="nav-other"><a href="other.html">Other Links</a></li>
         <li id="nav-contact"><a href="contact.html">Contact Info</a></li>
 
