cleanup V3.7 with class changes

--- a/courses.html
+++ b/courses.html
@@ -34,10 +34,10 @@
   </div>
   <main class="row">
     <article class="coffee-span-8 coffee-880-span-8 coffee-549-span-12 coffee-700-span-12">
-       <h3 class="heading-1"> Current through Spring 2026</h3>
+      <h3 class="heading-1"> Current through Spring 2026</h3>
       <br>
       <h3 class="heading-1"> BUSA603</h3>
-      25FA<br>
+      25FA, 26SP<br>
       Marketing Management & Analytics
       <p>Description: This course covers the application of analytics tools, techniques, strategies and methods to
         marketing management. Students learn to analyze market data, enabling management decisions to be based on
@@ -72,7 +72,7 @@
         software development and the tools needed to estimate the cost of a software development project for management
         in a corporate environment. The last topic in the course is a discussion of ethics as it relates to Information
         Technology. Current topics in ethics will be discussed through the use of relevant case studies. The recitation
-        portion of this course focuses on job preperation and career development.</p>
+        portion of this course focuses on job preparation and career development.</p>
 
       <br>
       <h3 class="heading-1"> CYSC250 (was ISEC250)</h3>
@@ -95,14 +95,6 @@
         issues, as well as ethical and legal issues. This foundational course serves as an introduction to many of the
         subsequent topics discussed in depth in later security courses. Note, this course has proctored exam(s). This
         exam requires additional technology, if student uses online proctoring.</p>
-
-      <br>
-      <h3 class="heading-1"> DATA630</h3>
-      26SP<br>
-      Applied Database Management
-      <p>Description: This course teaches data management from an applied perspective. The topics include fundamentals
-        of database management systems, structured query language (SQL) for data analytics, relational database design,
-        and data warehousing.</p>
 
       <br>
       <h3 class="heading-1"> ITEC136</h3>
@@ -131,7 +123,7 @@
       <p>Description: This course focuses on the value of Information Technology within an organization. For many
         organizations, IT is a cost; for others, it is a strategic advantage. Emphasis is placed on organizational
         efficiency and leadership of IT organizations to enhance business value and organizational performance. The
-        recitation portion of this course focuses on job preperation and career development.</p>
+        recitation portion of this course focuses on job preparation and career development.</p>
 
       <br>
       <h3 class="heading-1"> MATH601</h3>
