--- a/merit.html
+++ b/merit.html
@@ -76,36 +76,38 @@
         principles of digital techniques and demonstrating how to build a control device circuit. Understand the
         behaviors of electrons and learn safety precautions when using, building, altering, or repairing electronic
         devices with the Electronics Merit Badge.</p>
-         <h3 class="heading-1"> Other Resources</h4>
-         <p class="paragraph"><a href="hhttps://www.circuitlab.com/"
-          target="_blank">https://www.circuitlab.com/</a></p>
+      <h3 class="heading-1"> Other Resources</h4>
+        <p class="paragraph"><a href="hhttps://www.circuitlab.com/" target="_blank">https://www.circuitlab.com/</a></p>
 
-      <br>
+        <br>
 
-      <h3 class="heading-1"> Programming</h3>
-      <p class="paragraph"><a href="https://www.scouting.org/merit-badges/programming/"
-          target="_blank">https://www.scouting.org/merit-badges/programming/</a></p>
-      <p>Programming merit badge will take you “behind the screen” for a look at the complex codes that make digital
-        devices useful and fun.</p>
-      <br>
+        <h3 class="heading-1"> Programming</h3>
+        <p class="paragraph"><a href="https://www.scouting.org/merit-badges/programming/"
+            target="_blank">https://www.scouting.org/merit-badges/programming/</a></p>
+        <p>Programming merit badge will take you “behind the screen” for a look at the complex codes that make digital
+          devices useful and fun.</p>
+        <br>
 
-      <h3 class="heading-1"> Radio</h3>
-      <p class="paragraph"><a href="https://www.scouting.org/merit-badges/radio/"
-          target="_blank">https://www.scouting.org/merit-badges/radio/</a></p>
-      <p>Radio is a way to send information, or communications, from one place to another. Broadcasting includes both
-        one-way radio (a person hears the information but can¹t reply) as well as two-way radio (where the same person
-        can both receive and send messages).</p>
-      <br>
+        <h3 class="heading-1"> Radio</h3>
+        <p class="paragraph"><a href="https://www.scouting.org/merit-badges/radio/"
+            target="_blank">https://www.scouting.org/merit-badges/radio/</a></p>
+        <p>Radio is a way to send information, or communications, from one place to another. Broadcasting includes both
+          one-way radio (a person hears the information but can¹t reply) as well as two-way radio (where the same person
+          can both receive and send messages).</p>
+        <h3 class="heading-1"> Other Resources</h4>
+          <p class="paragraph"><a href="https://lcwo.net/" target="_blank">Learn CW Online - https://lcwo.net/</a></p>
+          <br>
 
-      <h3 class="heading-1"> Robotics</h3>
-      <p class="paragraph"><a href="https://www.scouting.org/merit-badges/robotics/"
-          target="_blank">https://www.scouting.org/merit-badges/robotics/</a></p>
-      <p>Build your own working robot with the Robotics Merit Badge. Learn about the robotics industry, discover the
-        different fields of robotics, explore the available career options in robotics, and design, build, program and
-        test your own robot.</p>
-      <br>
+          <h3 class="heading-1"> Robotics</h3>
+          <p class="paragraph"><a href="https://www.scouting.org/merit-badges/robotics/"
+              target="_blank">https://www.scouting.org/merit-badges/robotics/</a></p>
+          <p>Build your own working robot with the Robotics Merit Badge. Learn about the robotics industry, discover the
+            different fields of robotics, explore the available career options in robotics, and design, build, program
+            and
+            test your own robot.</p>
+          <br>
 
-        <P>Material on this page: © 2025 Boy Scouts of America - All Rights Reserved </P>
+          <P>Material on this page: © 2025 Boy Scouts of America - All Rights Reserved </P>
 
 
     </article>
