--- a/merit.html
+++ b/merit.html
@@ -46,6 +46,10 @@
         deepfakes, practice communicating effectively with AI, and apply their knowledge through a project or teaching
         activity. Finally, Scouts explore career paths in AI by researching or interviewing professionals in the field.
       </p>
+      <h3 class="heading-1">Artificial Intelligence – Other Resources</h3> 
+      <p class="paragraph"><a href="https://teachablemachine.withgoogle.com/" target="_blank">Google Teachable Machine – Build simple AI models visually</a></p> 
+      <p class="paragraph"><a href="https://ai4k12.org/" target="_blank">AI4K12 – Youth-friendly explanations and classroom AI activities</a></p> 
+      <p class="paragraph"><a href="https://machinelearningforkids.co.uk/" target="_blank">Machine Learning for Kids – Train models and use them with Scratch</a></p>
       <br>
 
       <h3 class="heading-1"> Cybersecurity</h3>
@@ -57,6 +61,11 @@
         devices, and the risks of public Wi-Fi, while also practicing safe habits like updating software and backing up
         data. Through hands-on activities, Scouts investigate real-world cyber incidents, participate in cybersecurity
         challenges, and explore career opportunities in the field.</p>
+        <h3 class="heading-1">Cybersecurity – Other Resources</h3> 
+        <p class="paragraph"><a href="https://www.cyber.org/" target="_blank">CYBER.ORG – Hands-on cybersecurity labs for grades 6–12</a></p> 
+        <p class="paragraph"><a href="https://www.cisa.gov/cybersecurity-awareness" target="_blank">CISA Cybersecurity Basics – Threats, passwords, updates, and safety</a></p> 
+        <p class="paragraph"><a href="https://beinternetawesome.withgoogle.com/" target="_blank">Google Interland – Gamified online safety and digital responsibility</a></p>
+
       <br>
 
       <h3 class="heading-1"> Digital Technology</h3>
@@ -66,6 +75,11 @@
         Scouts will give a brief history of the changes in digital technology and discuss how technology today compares
         with the technology available to previous generations—all while imagining what kinds of devices might be
         available to them in the future.</p>
+        <h3 class="heading-1">Digital Technology – Other Resources</h3> <
+        p class="paragraph"><a href="https://www.khanacademy.org/computing/computer-science/internet" target="_blank">Khan Academy Internet 101 – Networks, data, and digital devices</a></p> 
+        <p class="paragraph"><a href="https://computer.howstuffworks.com/" target="_blank">HowStuffWorks – Clear explanations of digital devices and systems</a></p> 
+        <p class="paragraph"><a href="https://www.bbc.co.uk/bitesize/subjects/zqmtsbk" target="_blank">BBC Bitesize – Digital technology concepts with videos and diagrams</a></p>
+
       <br>
 
       <h3 class="heading-1"> Electronics</h3>
@@ -76,13 +90,12 @@
         principles of digital techniques and demonstrating how to build a control device circuit. Understand the
         behaviors of electrons and learn safety precautions when using, building, altering, or repairing electronic
         devices with the Electronics Merit Badge.</p>
-      <h3 class="heading-1"> Other Resources</h4>
-        <p class="paragraph"><a href="hhttps://www.circuitlab.com/" target="_blank">https://www.circuitlab.com/</a></p>
 
-      <h3 class="heading-1"> Other Resources</h4>
-        <p class="paragraph"><a href="hhttps://www.circuitlab.com/" target="_blank">https://www.circuitlab.com/</a></p>
 
-        <br>
+<h3 class="heading-1">Electronics – Other Resources</h3> <p class="paragraph">
+  <a href="https://www.circuitlab.com/" target="_blank">CircuitLab – Beginner-friendly circuit simulator</a></p> 
+  <p class="paragraph"><a href="https://learn.sparkfun.com/" target="_blank">SparkFun Tutorials – Electronics basics, breadboards, and components</a></p> 
+<p class="paragraph"><a href="https://learn.adafruit.com/" target="_blank">Adafruit Learning System – Safety, circuits, and youth electronics projects</a></p>
         <br>
 
         <h3 class="heading-1"> Programming</h3>
@@ -91,8 +104,10 @@
         <p>Programming merit badge will take you “behind the screen” for a look at the complex codes that make digital
           devices useful and fun.</p>
           
-      <h3 class="heading-1"> Other Resources</h4>
-        <p class="paragraph"><a href="https://www.w3schools.com/" target="_blank">https://www.w3schools.com/</a></p>
+<h3 class="heading-1">Programming – Other Resources</h3> 
+<p class="paragraph"><a href="https://www.w3schools.com/" target="_blank">W3Schools – Beginner tutorials for HTML, CSS, JavaScript, Python</a></p> 
+<p class="paragraph"><a href="https://studio.code.org/" target="_blank">Code.org – Block and text coding activities for students</a></p> 
+<p class="paragraph"><a href="https://www.khanacademy.org/computing/computer-programming" target="_blank">Khan Academy Programming – JavaScript, HTML/CSS, and algorithm basics</a></p>
 
         <br>
 
@@ -102,8 +117,10 @@
         <p>Radio is a way to send information, or communications, from one place to another. Broadcasting includes both
           one-way radio (a person hears the information but can¹t reply) as well as two-way radio (where the same person
           can both receive and send messages).</p>
-        <h3 class="heading-1"> Other Resources</h4>
-          <p class="paragraph"><a href="https://lcwo.net/" target="_blank">Learn CW Online - https://lcwo.net/</a></p>
+<h3 class="heading-1">Radio – Other Resources</h3> 
+<p class="paragraph"><a href="https://www.arrl.org/youth" target="_blank">ARRL Youth Resources – Ham radio, communication, and licensing basics</a></p> 
+<p class="paragraph"><a href="https://lcwo.net/" target="_blank">Learn CW Online – Step-by-step Morse code training</a></p> 
+<p class="paragraph"><a href="http://websdr.org/" target="_blank">WebSDR – Listen to worldwide radio receivers in real time</a></p>
           <br>
 
         <h3 class="heading-1"> Robotics</h3>
@@ -112,6 +129,10 @@
         <p>Build your own working robot with the Robotics Merit Badge. Learn about the robotics industry, discover the
           different fields of robotics, explore the available career options in robotics, and design, build, program and
           test your own robot.</p>
+          <h3 class="heading-1">Robotics – Other Resources</h3> <p class="paragraph">
+            <a href="https://www.firstinspires.org/robotics" target="_blank">FIRST Robotics – Youth robotics programs and engineering foundations</a></p> 
+          <p class="paragraph"><a href="https://education.vex.com/" target="_blank">VEX STEM Labs – Free robotics and engineering lesson modules</a></p> 
+          <p class="paragraph"><a href="https://www.cmu.edu/roboticsacademy/" target="_blank">Carnegie Mellon Robotics Academy – Robotics concepts and tutorials</a></p>
         <br>
 
           <P>Material on this page: © 2025 Boy Scouts of America - All Rights Reserved </P>
