--- a/merit.html
+++ b/merit.html
@@ -63,7 +63,7 @@
         challenges, and explore career opportunities in the field.</p>
         <h3 class="heading-1">Cybersecurity – Other Resources</h3> 
         <p class="paragraph"><a href="https://www.cyber.org/" target="_blank">CYBER.ORG – Hands-on cybersecurity labs for grades 6–12</a></p> 
-        <p class="paragraph"><a href="https://www.cisa.gov/cybersecurity-awareness" target="_blank">CISA Cybersecurity Basics – Threats, passwords, updates, and safety</a></p> 
+        <p class="paragraph"><a href="https://www.nist.gov/itl/smallbusinesscyber/cybersecurity-basics" target="_blank">NIST Cybersecurity Basics – Threats, passwords, updates, and safety</a></p> 
         <p class="paragraph"><a href="https://beinternetawesome.withgoogle.com/" target="_blank">Google Interland – Gamified online safety and digital responsibility</a></p>
 
       <br>
@@ -130,7 +130,7 @@
           different fields of robotics, explore the available career options in robotics, and design, build, program and
           test your own robot.</p>
           <h3 class="heading-1">Robotics – Other Resources</h3> <p class="paragraph">
-            <a href="https://www.firstinspires.org/robotics" target="_blank">FIRST Robotics – Youth robotics programs and engineering foundations</a></p> 
+            <a href="https://www.firstinspires.org/" target="_blank">FIRST Robotics – Youth robotics programs and engineering foundations</a></p> 
           <p class="paragraph"><a href="https://education.vex.com/" target="_blank">VEX STEM Labs – Free robotics and engineering lesson modules</a></p> 
           <p class="paragraph"><a href="https://www.cmu.edu/roboticsacademy/" target="_blank">Carnegie Mellon Robotics Academy – Robotics concepts and tutorials</a></p>
         <br>
