--- a/cyber.html
+++ b/cyber.html
@@ -39,7 +39,7 @@
       <h3 class="heading-1"> AARP Top Suggestions for Preventing Fraud</h3>
       <p class="paragraph"><a href="https://johnfultonorg.github.io/aarp.html"
           target="_blank">https://johnfultonorg.github.io/aarp.html</a></p>
-      <p>Not cybersecurity specificy, but more "Living in an online world."</p>
+      <p>Not cybersecurity-specific, but more "Living in an online world."</p>
       <br>
 
       <h3 class="heading-1"> Top Four Cybersecurity Tasks</h3>
@@ -51,7 +51,7 @@
       <h3 class="heading-1"> Five Tips to Identify Phishing Emails</h3>
       <p class="paragraph"><a href="https://johnfultonorg.github.io/phishing.html"
           target="_blank">https://johnfultonorg.github.io/phishing.html</a></p>     
-      <p>Phishing is still the #1 way that attackers get in. Learn to recognize phishing emails. Thnaks to the Ohio Secretary of State for this hints.</p>
+      <p>Phishing is still the #1 way that attackers get in. Learn to recognize phishing emails. Thanks to the Ohio Secretary of State for these hints.</p>
       <br>
 
 
