--- a/merit.html
+++ b/merit.html
@@ -37,7 +37,7 @@
 
       <h2>Some STEM Merit Badges</h2>
       <br>
-      <h3 class="heading-1"> Artificial Inteligience</h3>
+      <h3 class="heading-1"> Artificial Intelligence</h3>
       <p class="paragraph"><a href="https://www.scouting.org/merit-badges/artificial-intelligence/"
           target="_blank">https://www.scouting.org/merit-badges/artificial-intelligence/</a></p>
       <p>The Artificial Intelligence (AI) Merit Badge introduces Scouts to the fundamentals of AI and automation through
