--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         in his spare time.</p>
     </article>
     <div class="coffee-span-4 coffee-549-span-12 coffee-700-span-12">
-      <img src="John.jpg">
+      <img src="John.jpg" alt="John Fulton">
     </div>
     <div id="footer-placeholder"></div>
   </main>
