--- a/footer.html
+++ b/footer.html
@@ -1,16 +1,29 @@
 <div class="coffee-span-12">
-  <a href="https://outlook.office.com/bookwithme/user/cc96498ad05a42feaee895a0ba0ddbe7@franklin.edu/meetingtype/LKvY98xRcUOO6FO5XUnP-w2?anonymous&ismsaljsauthenabled&ep=mlink"
-    target="_blank" class="button">Book Time with John Fulton</a>
+  <a
+    href="https://outlook.office.com/bookwithme/user/cc96498ad05a42feaee895a0ba0ddbe7@franklin.edu/meetingtype/LKvY98xRcUOO6FO5XUnP-w2?anonymous&ismsaljsauthenabled&ep=mlink"
+    target="_blank"
+    class="button"
+    >Book Time with John Fulton</a
+  >
 </div>
 <div class="coffee-span-12">
-  <a href="mailto:john.fulton2@franklin.edu" target="_blank" class="button">Email John Fulton at
-    john.fulton2@franklin.edu</a>
+  <a href="mailto:john.fulton2@franklin.edu" target="_blank" class="button"
+    >Email John Fulton at john.fulton2@franklin.edu</a
+  >
   <div class="coffee-span-12">
     <div>
+      <p>Version 3.9</p>
 
-      <p>Version 3.8</p>
-
-      <p>Copyright © 2025 John Fulton <br /> This site includes third-party content, I do
-        not claim ownership over these third-party materials. All rights to the original
-        content belong to their respective owners</p>
+      <p>
+        Copyright © 2025 - <span id="year"></span> John Fulton <br />
+        This site includes third-party content, I do not claim ownership over
+        these third-party materials. All rights to the original content belong
+        to their respective owners
+      </p>
     </div>
+
+    <script>
+      document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
+  </div>
+</div>
