--- a/footer.html
+++ b/footer.html
@@ -15,15 +15,12 @@
       <p>Version 3.9</p>
 
       <p>
-        Copyright © 2025 - <span id="year"></span> John Fulton <br />
+        <!-- Year set in index.html  -->
+        Copyright © 2025 – <span id="year"></span> John Fulton<br />
         This site includes third-party content, I do not claim ownership over
         these third-party materials. All rights to the original content belong
         to their respective owners
       </p>
     </div>
-
-    <script>
-      document.getElementById("year").textContent = new Date().getFullYear();
-    </script>
   </div>
 </div>
