--- a/other.html
+++ b/other.html
@@ -27,7 +27,7 @@
     <link rel="icon" type="image/x-icon" href="jf.png" />
   </head>
 
-  <body>
+  <body data-active-page="other">
     <div class="row full-width-row header">
       <header class="coffee-span-12">
         <a href="#row" class="skip">Skip to main content</a>
@@ -95,17 +95,17 @@
         </p>
         <br />
 
-        <h3 class="heading-1">How novices learn to code: What I learned teaching in a coding bootcamp</h3>
+        <h3 class="heading-1">
+          How novices learn to code: What I learned teaching in a coding
+          bootcamp
+        </h3>
         <p class="paragraph">
           <a href="How novices learn to code.pdf" target="_blank"
             >How novices learn to code.pdf</a
           >
         </p>
-        <p>
-          CouchCon Presentation, Sept., 2020
-        </p>
+        <p>CouchCon Presentation, Sept., 2020</p>
         <br />
-
       </article>
       <div id="footer-placeholder"></div>
     </main>
@@ -113,46 +113,6 @@
       <div class="coffee-span-12"></div>
     </div>
 
-    <script>
-      // This function fetches the navigation and sets the active class
-      async function loadNavigation(activePage) {
-        try {
-          // Fetch the HTML content from the nav.html file
-          const response = await fetch("nav.html");
-          const html = await response.text();
-
-          // Insert the fetched HTML into the placeholder div
-          document.getElementById("nav-placeholder").innerHTML = html;
-
-          // Find the correct list item and add the active class
-          const activeTab = document.getElementById(`nav-${activePage}`);
-          if (activeTab) {
-            activeTab.classList.add("active-tab");
-          }
-        } catch (error) {
-          console.error("Error loading navigation:", error);
-        }
-      }
-
-      // This function fetches the footer
-      async function loadFooter() {
-        try {
-          // Fetch the HTML content from the nav.html file
-          const response = await fetch("footer.html");
-          const html = await response.text();
-
-          // Insert the fetched HTML into the placeholder div
-          document.getElementById("footer-placeholder").innerHTML = html;
-        } catch (error) {
-          console.error("Error loading footer:", error);
-        }
-      }
-
-      // Call the function on page load, passing the name of the active page for the navigation
-      document.addEventListener("DOMContentLoaded", () => {
-        loadNavigation("other");
-        loadFooter();
-      });
-    </script>
+    <script src="js/layout.js"></script>
   </body>
 </html>
